<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/Attempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attempts"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtAttempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:inputType="number">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Completions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Completions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtCompletions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:inputType="number"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Yards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yards"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtYards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Interceptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Interceptions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtInterceptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:inputType="number"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Touchdowns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Touchdowns"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtTouchdowns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" android:inputType="number"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/GetRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GetRating" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rating"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

</TableLayout>